tests/NormalTests/paczka1/fuzzy1/28982592.err
Error in line 4: 4hAMS26QgW S670 59,5
Error in line 9: lJTENugP A663 55,6
Error in line 28: lJTENugP S535 -6,3
Error in line 29: 4hAMS26QgW A663 61,6
Error in line 22: lJTENugP S535 95,1
Error in line 31: 4hAMS26QgW A563 11,6
